<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/infoTitleCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/back"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/infoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_bold"
            android:text="@string/infoPanel"
            android:textColor="@color/textview_colors"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/infoTitleCard">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/modeTitleSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modeTitle"
                android:fontFamily="@font/manrope_bold"
                android:textSize="24sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/textview_colors"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textAlignment="viewStart"/>

            <LinearLayout

                android:id="@+id/modeSection"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/modeTitleSection">


                <ImageView
                    android:id="@+id/modeOnImage"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="5dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/toggle_on"  />

                <TextView
                    android:id="@+id/modeOnDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/modeOnDesc"
                    android:textSize="16sp"
                    android:textColor="@color/textview_colors"
                    android:textAlignment="center"/>

                <ImageView
                    android:id="@+id/modeIntervalImage"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="5dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/clock"  />

                <TextView
                    android:id="@+id/modeIntervalDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textview_colors"
                    android:text="@string/modeIntervalDesc"
                    android:textSize="16sp"
                    android:textAlignment="center"/>

                <ImageView
                    android:id="@+id/modeOffImage"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="5dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/toggle_off" />

                <TextView
                    android:id="@+id/modeOffDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/modeOffDesc"
                    android:textColor="@color/textview_colors"
                    android:textSize="16sp"
                    android:textAlignment="center" />
            </LinearLayout>

            <TextView
                android:id="@+id/aboutTitleSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutTitle"
                android:fontFamily="@font/manrope_bold"
                android:textSize="24sp"
                android:layout_marginTop="30dp"
                android:textColor="@color/textview_colors"
                app:layout_constraintTop_toBottomOf="@+id/modeSection"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textAlignment="viewStart"/>

            <LinearLayout
                android:id="@+id/aboutSection"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/aboutTitleSection"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/pb"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/logopb" />

                <TextView
                    android:id="@+id/aboutDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutDesc"
                    android:textSize="16sp"
                    android:textColor="@color/textview_colors"
                    android:textAlignment="center" />
                <TextView
                    android:id="@+id/github"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue_m"
                    android:autoLink="web"
                    android:text="@string/github"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:layout_margin="10dp"
                    />
                <TextView
                    android:id="@+id/authorDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/authorDesc"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    android:layout_marginBottom="100dp"
                    />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>