<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:context=".MainActivity"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainTitleCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView

            android:id="@+id/mainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_bold"
            android:text="@string/mainPanel"
            android:textColor="@color/textview_colors"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:scaleType="fitCenter"
            android:layout_marginEnd="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/info"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.cardview.widget.CardView
        android:id="@+id/generalInfoCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTitleCard">

        <LinearLayout
            android:id="@+id/connectSection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="">

            <ImageView
                android:id="@+id/maskImage"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginStart="12dp"
                android:layout_gravity="start"
                android:contentDescription="@string/maskImage"
                android:src="@drawable/mask"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/scanButton"
                    style="@android:style/Widget.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/button"
                    android:fontFamily="@font/manrope_medium"
                    android:text="@string/scan"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:paddingHorizontal="6dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/infoSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/generalInfoCard">

        <androidx.cardview.widget.CardView
            android:id="@+id/batteryInfoCard"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/batteryIcon"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/battery" />

                    <TextView
                        android:id="@+id/batteryHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/manrope_medium"
                        android:text="@string/battery"
                        android:textSize="20sp"
                        android:textColor="@color/textview_colors"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/batteryValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/emptyValue"
                        android:textSize="30sp"
                        android:textColor="@color/textview_colors"/>

                    <TextView
                        android:id="@+id/percentSign"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/percentage"
                        android:textSize="20sp"
                        android:textColor="@color/textview_colors"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/runtimeInfoCard"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/runtimeIcon"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/time" />

                    <TextView
                        android:id="@+id/TimeHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/manrope_medium"
                        android:text="@string/runtime"
                        android:textSize="20sp"
                        android:textColor="@color/textview_colors"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/minutesValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/emptyValue"
                        android:textSize="30sp"
                        android:textColor="@color/textview_colors"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/minutes"
                        android:textSize="20sp"
                        android:textColor="@color/textview_colors"/>
                    <TextView
                        android:id="@+id/secondsValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/emptyValue"
                        android:textSize="30sp"
                        android:textColor="@color/textview_colors"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/seconds"
                        android:textSize="20sp"
                        android:textColor="@color/textview_colors"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/modeCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoSection"
        app:layout_constraintVertical_bias="0.0">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/modeHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manrope_medium"
                    android:text="@string/mode"
                    android:textColor="@color/textview_colors"
                    android:textSize="25sp"
                    android:layout_weight="1"/>

                <ImageView
                    android:id="@+id/angle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="0"
                    android:src="@drawable/angle" />
            </LinearLayout>


            <RadioGroup
                android:id="@+id/modes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <RadioButton
                    android:id="@+id/radioButtonOn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/blue_m"
                    android:checked="true"
                    android:text="@string/turnOn"
                    android:textColor="@color/textview_colors"
                    android:textColorHighlight="@color/blue_d"
                    android:textColorLink="@color/blue_d"
                    android:textSize="18sp" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="6dp"
                    android:background="?android:attr/listDivider" />

                <RadioButton
                    android:id="@+id/radioButtonInterval1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/blue_m"
                    android:text="@string/interval1"
                    android:textColor="@color/textview_colors"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioButtonInterval2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/blue_m"
                    android:text="@string/interval2"
                    android:textColor="@color/textview_colors"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioButtonInterval5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/blue_m"
                    android:text="@string/interval5"
                    android:textColor="@color/textview_colors"
                    android:textSize="18sp" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="6dp"
                    android:background="?android:attr/listDivider" />

                <RadioButton
                    android:id="@+id/radioButtonOff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/blue_m"
                    android:text="@string/turnOff"
                    android:textColor="@color/textview_colors"
                    android:textSize="18sp" />

            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>